# streams

./: .gitignore  .pypirc  .readthedocs.yaml  CONTRIBUTING.rst  MANIFEST.in  Makefile  Pipfile  README.rst  docutils.conf  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/stubs/: description.rst  examples.rst
docs/usage/: doubly_linked_stream.rst  examples.rst  installation.rst  linear_stream.rst  singly_linked_stream.rst  stream.rst
examples/: basic.py  pi.py
streams/: __init__.py  __init__.pyi  abc.py  abc.pyi
tests/: __init__.py
