[metadata]
name = streams
version = 0.1.2
author = Tyler Crompton
author_email = tyler@tylercrompton.com
description = Provides stream classes inspired by Scheme
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = stream, collection, lazy evaluation
license_file = LICENSE.txt
url = https://github.com/tylercrompton/streams
project_urls =
    Bug Tracker = https://github.com/tylercrompton/streams/issues
    Documentation = https://pystreams.readthedocs.io/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
include_package_data = True
package_dir =
    streams = streams
packages = streams
python_requires = >=3.9
