# This file is part of Streams.
#
# Streams is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, either version 3 of the License, or (at your option) any later
# version.
#
# Streams is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along with
# Streams.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = streams
version = 0.1.2
author = Tyler Crompton
author_email = tyler@tylercrompton.com
description = Provides stream classes inspired by Scheme
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = stream, collection, lazy evaluation
license_file = LICENSE.txt
url = https://github.com/tylercrompton/streams
project_urls =
    Bug Tracker = https://github.com/tylercrompton/streams/issues
    Documentation = https://pystreams.readthedocs.io/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
include_package_data = True
package_dir =
    streams = streams
packages = streams
python_requires = >=3.9
